Фикс: архитектура, безопасность, память
- AuthorizationService перенесён из servlet/ в новый пакет security/;
- UserManager инжектируется через конструктор вместо статического ComponentAccessor;
- deleteAllMailItemsSafe удаляет батчами по 200 записей вместо загрузки всей таблицы в память;
- Поиск по тегам перенесён на уровень SQL, Java-фильтрация и лимит 5000 удалены.